--- a/style.css
+++ b/style.css
@@ -165,7 +165,6 @@ section {
         flex-direction: row;
         justify-content: center;
         margin: 0 auto;
-        font-size: 15px;
     }
     header ul li {
         font-size: 20px; 
@@ -182,3 +181,12 @@ section {
         font-size: 18px;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    header ul li {
+        font-size: 15px;
+    }
+    .current {
+        font-size: 18px;
+    }
+} 
