--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ main {
 }
 
 .wrapper-1 {
-    background: #8AF3FF;
+    background: rgb(187, 245, 252);
 }
 .wrapper-2 {
     background: #78C0E0;
@@ -85,25 +85,58 @@ section {
 
 /* projects */
 
+.projects {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: black;
+}
+
+.project-card-list {
+    display: flex;
+    width: 100%;
+    height: 50vh;
+    justify-content: center;
+}
+
 .project-card {
-    width: 80%;
-    background: #F0F7F4;
-    border: #eee 1px solid;
+    background: rgb(185, 204, 241);
+    border: 1px solid rgb(185, 204, 241);
     border-radius: 2px;
-    margin: 0 auto;
+    margin: 20px;
+    box-sizing: border-box;
     font-size: 18px;
+    width: 50%;
+}
+
+.project-card-block {
+    padding-top: 5px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .project-card img {
-    width: 100%;
+    width: 60%;
 }
 
 .project-card i {
     font-size: 30px;
 }
 
+.project-icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 .project-description {
     padding: 20px;
+}
+
+.project-description h2 {
+    margin: 0;
 }
 
 .project-description h2, .project-description p {
@@ -188,6 +221,19 @@ section {
     }
     .current {
         font-size: 1.2rem;
+    }
+
+    .projects {
+        overflow: scroll;
+    }
+
+    .project-card-list {
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .project-card {
+        width: 90vw;
     }
 } 
 
